force-app/main/default/objects/Expansion_Decision__c/Expansion_Decision__c.object-meta.xml
<CustomObject>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)

Auto-generated decision record identifier</description>
    <label>Expansion Decision</label>
    <nameField>
        <displayFormat>DEC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expansion Decisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>