force-app/main/default/objects/Expansion_Decision__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>User (Leadership / CPO) who approved or rejected the site</inlineHelpText>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expansion_Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>