force-app/main/default/objects/Expansion_Decision__c/fields/Committed_Capex__c.field-meta.xml
<CustomField>
    <fullName>Committed_Capex__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Actual capex committed at approval; may differ from projection estimate</inlineHelpText>
    <label>Committed Capex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>