force-app/main/default/objects/Expansion_Decision__c/fields/Days_to_Decision__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Decision__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <formula>IF(
  NOT(ISBLANK(Decision_Date__c)),
  DATEVALUE(Decision_Date__c) -
  DATEVALUE(Site_Score_Card__r.CreatedDate),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Decision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>