force-app/main/default/objects/Expansion_Decision__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Timestamp of the decision; auto-stamped by Flow on status change</inlineHelpText>
    <label>Decision Date</label>
    <type>DateTime</type>
</CustomField>