force-app/main/default/objects/Expansion_Decision__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Reason code when Decision Status = Rejected; feeds back into Agentforce model retraining</inlineHelpText>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Competition</fullName>
            </value>
            <value>
                <fullName>Low Demand Score</fullName>
            </value>
            <value>
                <fullName>Unfavourable Financials</fullName>
            </value>
            <value>
                <fullName>Regulatory Issue</fullName>
            </value>
            <value>
                <fullName>Site Unavailable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>