force-app/main/default/objects/Expansion_Decision__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Free-text notes from the approver; stored in immutable audit log</inlineHelpText>
    <label>Remarks</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>