force-app/main/default/objects/Expansion_Decision__c/fields/Site_Score_Card__c.field-meta.xml
<CustomField>
    <fullName>Site_Score_Card__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Master-detail to the Scorecard that drove this decision</inlineHelpText>
    <label>Site Score Card</label>
    <referenceTo>Site_Score__c</referenceTo>
    <relationshipLabel>Expansion Decisions</relationshipLabel>
    <relationshipName>Expansion_Decisions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>