force-app/main/default/objects/Expansion_Decision__c/fields/Target_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Open_Date__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Planned store opening date confirmed at approval</inlineHelpText>
    <label>Target Open Date</label>
    <type>Date</type>
</CustomField>