force-app/main/default/objects/Expansion_Decision__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approved_By__c</columns>
    <columns>Days_to_Decision__c</columns>
    <columns>Decision_Date__c</columns>
    <columns>Decision_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Rejection_Reason__c</columns>
    <columns>Site_Score_Card__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>